finished daily exercises plus extra

--- a/le06_apr09/exercises.ipynb
+++ b/le06_apr09/exercises.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "10d307ee-2795-4489-8c6f-98e5dcfa522f",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,27 @@
     "first_names = ['Jane', 'John', 'Jennifer']\n",
     "last_names = ['Doe', 'Williams', 'Smith']\n",
     "ages = [20, 40, 30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "77ae3a15-2da3-41e6-8b69-7f74df6f4299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jane Doe 20\n",
+      "John Williams 40\n",
+      "Jennifer Smith 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fn, ln, a in zip(first_names, last_names, ages):\n",
+    "    print(fn, ln, a)"
    ]
   },
   {
@@ -30,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "6c848feb-30e0-4334-b571-0e7a2a1ba9e7",
    "metadata": {},
    "outputs": [],
@@ -43,11 +64,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fc30fb0a-a73a-47f4-9b83-9cdcd066fefe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('January', 5200.0),\n",
+       " ('February', 5100.0),\n",
+       " ('March', 4800.0),\n",
+       " ('April', 16400.0),\n",
+       " ('May', 4800.0),\n",
+       " ('June', 3800.0),\n",
+       " ('July', -9900.0),\n",
+       " ('August', 25400.0),\n",
+       " ('September', 9800.0),\n",
+       " ('October', 20800.0),\n",
+       " ('November', 1900.0)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_profit = [(month, sales - cost) for month, sales, cost in zip(months, total_sales, prod_cost)]\n",
+    "monthly_profit"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eca35aff-1944-4eeb-9f98-be5986dd7a5b",
    "metadata": {},
    "source": [
     "How much is the profit for December?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c075cc5f-b6d0-4e2c-abf1-01643c94f616",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('August', 25400.0)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(monthly_profit, key=lambda x: x[1])"
    ]
   },
   {
@@ -60,12 +134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "fa178881-26a7-4af8-a07e-ed43147d6def",
    "metadata": {},
    "outputs": [],
    "source": [
     "lst = [\"Mary@GMAIL.com\", \"hari@YaHoo.com\", \"SopHIA@qg.com\", \"EVan@YahoO.COM\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0fdb5ad9-dce7-4823-b2b9-b18070e02c14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mary@gmail.com', 'hari@yahoo.com', 'sophia@qg.com', 'evan@yahoo.com']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda em: em.lower(), lst))"
    ]
   },
   {
@@ -87,6 +182,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fad65a13-b4ec-4723-b6cd-e757e6533997",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pulp fiction'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(movies, key=lambda x: movies[x])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f600f294-58ad-4874-b211-71ca156de942",
    "metadata": {},
@@ -96,12 +212,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "85996a19-7b33-440b-a7e8-2ecf932764d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "lst = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "933bc21b-7186-4151-9db0-0972bbd2c0e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda el: el % 2 == 1, lst))"
    ]
   },
   {
@@ -120,6 +257,27 @@
    "outputs": [],
    "source": [
     "lst = [-4, 2, -3, 6, 3, 8, 11, -10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5698795e-8268-45a4-8fb3-9938dc1d5be2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(filter(lambda el: el % 2 == 1, lst))"
    ]
   },
   {
@@ -142,6 +300,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "dac7fbb1-e10a-4260-b1ac-15250a2fe788",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 10]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x: x not in lst2, lst1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "82f2c1cd-2793-4fbb-a756-19d3bd027be7",
    "metadata": {},
@@ -151,13 +330,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "fa661978-2528-4cac-9cbb-484d8f50df32",
    "metadata": {},
    "outputs": [],
    "source": [
     "a = [1,2,3,5,7,9]\n",
     "b = [2,3,5,6,7,8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3008bf53-9cfd-4efb-b67a-5bced50a5cf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x: x in b, a))"
    ]
   },
   {
@@ -170,12 +370,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "7cf9aa7b-46f6-4c4c-a44e-388780615211",
    "metadata": {},
    "outputs": [],
    "source": [
     "lst = [2, -2, -3, 4, -5, 6, 7, -8, 9, -10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "dde6bcb1-de18-47df-af46-0270d6ed4d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-2, -3, -5, -8, -10]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x: x < 0, lst))"
    ]
   },
   {
@@ -188,12 +409,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "id": "2809a91c-6cdc-46fe-b0ff-e1458cbed6e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "lst = [6, 7, 23, 27, 24, 62, 87, 28, 23, 91]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "892d7613-fed3-4c0e-8de0-c382e36cd4b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12, 14, 46, 54, 48, 124, 174, 56, 46, 182]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda x: 2 * x, lst))"
    ]
   },
   {
@@ -206,13 +448,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "53a0dcf1-79a1-4dd8-8c0b-3d7dafda9634",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cities population\n",
     "lst = [(3090508, \"Athens\"), (9002488, \"London\"), (402762, \"Zurich\"), (198979, \"Geneva\"), (3769495, \"Amsterdam\"), (2165423, \"Milano\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "7026aa4c-c9c0-42d9-b06e-ad2d84bd5442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(198979, 'Geneva'),\n",
+       " (402762, 'Zurich'),\n",
+       " (3769495, 'Amsterdam'),\n",
+       " (9002488, 'London'),\n",
+       " (2165423, 'Milano'),\n",
+       " (3090508, 'Athens')]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(sorted(lst, key=lambda x: x[1][-1]))"
    ]
   },
   {
@@ -225,11 +493,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "75994297-2cbd-496b-b028-7f645ed1c9d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((198979, 'Geneva'), (9002488, 'London'))"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def min_n_max(lst):\n",
+    "    min_ = min(lst, key=lambda x: x[0])\n",
+    "    max_ = max(lst, key=lambda x: x[0])\n",
+    "    return (min_, max_)\n",
+    "min_n_max(lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,12 +526,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "id": "fe0f08b0-8251-407a-83da-47c1767c7758",
    "metadata": {},
    "outputs": [],
    "source": [
     "lst =  [4,67,8, None, 32, 'Missing', 21, 23.3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c9b21802-c52d-4360-83e6-8fd97624db9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 67, 8, 32, 21]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x: isinstance(x, int), lst))"
    ]
   },
   {
@@ -259,12 +565,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "id": "5b6d999f-0424-47a0-8a50-8ca32281d254",
    "metadata": {},
    "outputs": [],
    "source": [
     "lst =  [4,67,8, 'not found', 32, 'missing', 21, 23, 'warning', 'alert']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "75b7aee4-fb18-4d5a-b2a4-d1ed78a8b169",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 8, 21, 23, 32, 67, 'alert', 'missing', 'not found', 'warning']"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst1 = list(filter(lambda x: isinstance(x, int), lst))\n",
+    "lst1.sort()\n",
+    "lst2 = list(filter(lambda x: isinstance(x, str), lst))\n",
+    "lst2.sort()\n",
+    "lst1.extend(lst2)\n",
+    "lst1\n",
+    "\n",
+    "# ### one line but does not sort strings\n",
+    "# lst.sort(key=lambda x: x if isinstance(x, int) else float('+inf'))\n",
+    "# lst"
    ]
   },
   {
@@ -277,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "id": "03a69ca2-2685-4e87-b1d4-8852e1556578",
    "metadata": {},
    "outputs": [],
@@ -287,11 +623,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "979f5641-b38b-482f-8d7d-8f8156add85e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23.0, 10.25, 27.25, 46.0, 4.75, 408.0]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def avg(lst):\n",
+    "    return sum(lst) / len(lst)\n",
+    "\n",
+    "list(map(avg, lst))"
+   ]
   }
  ],
  "metadata": {
