--- a/le06_apr09/exercises.ipynb
+++ b/le06_apr09/exercises.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "10d307ee-2795-4489-8c6f-98e5dcfa522f",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "77ae3a15-2da3-41e6-8b69-7f74df6f4299",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "6c848feb-30e0-4334-b571-0e7a2a1ba9e7",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "fc30fb0a-a73a-47f4-9b83-9cdcd066fefe",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        " ('November', 1900.0)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "c075cc5f-b6d0-4e2c-abf1-01643c94f616",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "('August', 25400.0)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "fa178881-26a7-4af8-a07e-ed43147d6def",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "0fdb5ad9-dce7-4823-b2b9-b18070e02c14",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "['mary@gmail.com', 'hari@yahoo.com', 'sophia@qg.com', 'evan@yahoo.com']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "93795913-ef24-49a0-8887-7ccf3a57a7b1",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "fad65a13-b4ec-4723-b6cd-e757e6533997",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "'pulp fiction'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "85996a19-7b33-440b-a7e8-2ecf932764d1",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "933bc21b-7186-4151-9db0-0972bbd2c0e5",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "[1, 3, 5, 7, 9, 11]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "6213f88e-dd41-44ae-9c30-7c860ff623ac",
    "metadata": {},
    "outputs": [],
@@ -261,17 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "5698795e-8268-45a4-8fb3-9938dc1d5be2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, 5, 7, 9, 11]"
+       "[-3, 3, 11]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "113b3655-2642-4f87-8eab-57694ef92cd0",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "dac7fbb1-e10a-4260-b1ac-15250a2fe788",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "[1, 3, 5, 7, 10]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "fa661978-2528-4cac-9cbb-484d8f50df32",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "3008bf53-9cfd-4efb-b67a-5bced50a5cf9",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "[2, 3, 5, 7]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "7cf9aa7b-46f6-4c4c-a44e-388780615211",
    "metadata": {},
    "outputs": [],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "dde6bcb1-de18-47df-af46-0270d6ed4d8f",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "[-2, -3, -5, -8, -10]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "id": "2809a91c-6cdc-46fe-b0ff-e1458cbed6e1",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "id": "892d7613-fed3-4c0e-8de0-c382e36cd4b7",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "[12, 14, 46, 54, 48, 124, 174, 56, 46, 182]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "id": "53a0dcf1-79a1-4dd8-8c0b-3d7dafda9634",
    "metadata": {},
    "outputs": [],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "id": "7026aa4c-c9c0-42d9-b06e-ad2d84bd5442",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        " (3090508, 'Athens')]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "id": "75994297-2cbd-496b-b028-7f645ed1c9d0",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "((198979, 'Geneva'), (9002488, 'London'))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "id": "fe0f08b0-8251-407a-83da-47c1767c7758",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "id": "c9b21802-c52d-4360-83e6-8fd97624db9a",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
        "[4, 67, 8, 32, 21]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "id": "5b6d999f-0424-47a0-8a50-8ca32281d254",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "75b7aee4-fb18-4d5a-b2a4-d1ed78a8b169",
    "metadata": {},
    "outputs": [
@@ -585,22 +585,16 @@
        "[4, 8, 21, 23, 32, 67, 'alert', 'missing', 'not found', 'warning']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lst1 = list(filter(lambda x: isinstance(x, int), lst))\n",
-    "lst1.sort()\n",
-    "lst2 = list(filter(lambda x: isinstance(x, str), lst))\n",
-    "lst2.sort()\n",
+    "lst1 = sorted(filter(lambda x: isinstance(x, int), lst))\n",
+    "lst2 = sorted(filter(lambda x: isinstance(x, str), lst))\n",
     "lst1.extend(lst2)\n",
-    "lst1\n",
-    "\n",
-    "# ### one line but does not sort strings\n",
-    "# lst.sort(key=lambda x: x if isinstance(x, int) else float('+inf'))\n",
-    "# lst"
+    "lst1"
    ]
   },
   {
@@ -613,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "id": "03a69ca2-2685-4e87-b1d4-8852e1556578",
    "metadata": {},
    "outputs": [],
@@ -623,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "id": "979f5641-b38b-482f-8d7d-8f8156add85e",
    "metadata": {},
    "outputs": [
@@ -633,16 +627,13 @@
        "[23.0, 10.25, 27.25, 46.0, 4.75, 408.0]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def avg(lst):\n",
-    "    return sum(lst) / len(lst)\n",
-    "\n",
-    "list(map(avg, lst))"
+    "list(map(lambda inner_list: sum(inner_list) / len(inner_list), lst))"
    ]
   }
  ],
