letcure 07 - 10/04 exercises - applied Python to regex exercises - fixed some regex patterns

--- a/le07_apr10/exercises.ipynb
+++ b/le07_apr10/exercises.ipynb
@@ -9,11 +9,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "61bb2001-4b6e-47b2-bbba-83078c2c47df",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a07d4849-3f75-4478-8b80-0c41c7a1e2bb",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "[a-zA-Z]+"
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ed7607fd-b8b7-470e-a230-906b4cbb7c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 12), match='sdfsdfSDFSDF'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = r\"^[a-zA-Z]+$\"\n",
+    "string = \"sdfsdfSDFSDF\"\n",
+    "if match := re.search(pattern, string):\n",
+    "    print(match)\n",
+    "else:\n",
+    "    print('pattern not found')"
    ]
   },
   {
@@ -25,11 +50,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6a6c10f4-00ab-40e6-87b2-99d9860f1f36",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0caebdfc-9dfc-4f40-96b4-d86b6fda4c36",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 3), match='sdf'>\n"
+     ]
+    }
+   ],
    "source": [
-    "^[a-zA-Z]+\\b"
+    "pattern = r\"^[a-zA-Z]+\\b\"\n",
+    "string = 'sdf sdf sdf sdf sdf'\n",
+    "if match := re.search(pattern, string):\n",
+    "    print(match)\n",
+    "else:\n",
+    "    print('pattern not found')"
    ]
   },
   {
@@ -41,11 +81,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "03b37e6e-9ede-4759-ba47-d6da37a897b2",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14c61c49-13cd-4178-a957-934d8c3720be",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(16, 24), match='lastword'>\n"
+     ]
+    }
+   ],
    "source": [
-    "\\b[a-zA-Z]+$"
+    "pattern = r\"\\b[a-zA-Z]+$\"\n",
+    "string = 'sdf sdf sdf sdf lastword'\n",
+    "if match := re.search(pattern, string):\n",
+    "    print(match)\n",
+    "else:\n",
+    "    print('pattern not found')"
    ]
   },
   {
@@ -57,11 +112,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "14630b3d-fc76-4aaf-9384-9d310ef5f1e0",
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5953bfe4-8211-41bf-beaa-c58854419ccc",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 6), match='Brazil'>\n"
+     ]
+    }
+   ],
    "source": [
-    "[a-yA-Y]*z[a-yA-Y]*"
+    "pattern = r\"[a-yA-Y]*z[a-yA-Y]*\"\n",
+    "string = 'Brazil'\n",
+    "if match := re.search(pattern, string):\n",
+    "    print(match)\n",
+    "else:\n",
+    "    print('pattern not found')"
    ]
   },
   {
@@ -73,11 +143,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0ffa100f-745b-454d-92f4-b1c0e5f91472",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2d0f05a1-1bac-4e89-93e4-4130afafd28f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 12), match='123123123123'>\n"
+     ]
+    }
+   ],
    "source": [
-    "\\d{10,13}"
+    "pattern = r\"\\d{10,13}\"\n",
+    "string = '123123123123'\n",
+    "if match := re.search(pattern, string):\n",
+    "    print(match)\n",
+    "else:\n",
+    "    print('pattern not found')"
    ]
   },
   {
@@ -89,11 +174,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e419f340-7377-4810-84ae-4bb315242f9c",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5f61d4b5-8056-429a-ac50-5a427a6920e4",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(66, 93), match='admissions@footballclub.com'>\n"
+     ]
+    }
+   ],
    "source": [
-    "\\b[\\w.-]+@[a-zA-Z.-]+(?<!\\.)+\\.[a-zA-Z]{2,3}\\b"
+    "pattern = r\"\\b[\\w.-]+@[a-zA-Z.-]+(?<!\\.)+\\.[a-zA-Z]{2,3}\\b\"\n",
+    "string = \"For more information please write to the following email address: admissions@footballclub.com, Mrs Stepanie Smith will be delighted to assist you.\"\n",
+    "if match := re.search(pattern, string):\n",
+    "    print(match)\n",
+    "else:\n",
+    "    print('pattern not found')"
    ]
   },
   {
@@ -102,43 +202,158 @@
    "metadata": {},
    "source": [
     "##### 7. E-mail Validation  \n",
-    "- Write an email validating function, returning True or False depending on whether an email address is correctly formatted (e.g. john.smith@yahoo.com works, not  john.smith@yahoο, or  johnsmith@yahoo.com). No input should lead to an exception.\n",
-    "- Bonus. Extend your email validation in the first part so\n",
-    "it will accept not only  “.” but also  \"-\" and \"_\"  .\n",
-    "requires at least four characters after the ./-/_ symbol.\n",
-    "extensions with minimum 2 characters and maximum 4 characters shall be acceptable"
+    "a) Write an email validating function, returning True or False depending on whether an email address is correctly formatted (e.g. john.smith@yahoo.com works, not  john.smith@yahoο, or  johnsmith@yahoo.com). No input should lead to an exception.\n",
+    "- Bonus. Extend your email validation in the first part so  \n",
+    "    b) it will accept not only  “.” but also  \"-\" and \"_\"  .  \n",
+    "    c) requires at least four characters after the ./-/_ symbol.  \n",
+    "    d) extensions with minimum 2 characters and maximum 4 characters shall be acceptable"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c9a0eb5-1db1-42e4-aef8-4b2ff2d87232",
+   "id": "b7b48600-92d0-4b1f-83ec-f7b4fa5e4653",
    "metadata": {},
    "source": [
-    "[\\w.-]+@[a-zA-Z.-]+(?<!\\.)+\\.[a-zA-Z]{2,3}"
+    "- a) Write an email validating function, returning True or False depending on whether an email address is correctly formatted (e.g. john.smith@yahoo.com works, not john.smith@yahoο, or johnsmith@yahoo.com). No input should lead to an exception."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9466d9ef-d64f-4a6f-bcaf-b935cfca8847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def email_validator(email: str) -> bool:\n",
+    "    return bool(re.search(pattern, email))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2cfb3b75-8eb4-4351-bcc3-389c133c28fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('john.smith@ya-hoo.com', True),\n",
+       " ('john.smith@yahoο', False),\n",
+       " ('johnsmith@yahoo..com', False)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = \"[\\w.-]+@[a-zA-Z.-]+(?<!\\.)\\.[a-zA-Z]{2,3}\"\n",
+    "sample_strings = ['john.smith@ya-hoo.com', 'john.smith@yahoο', 'johnsmith@yahoo..com']\n",
+    "list(zip(sample_strings, map(email_validator, sample_strings)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8f7fe3a3-05b5-4fc0-8898-a21e5090f2d2",
+   "id": "9ff3a94f-8336-46f0-99ee-81fabba32326",
    "metadata": {},
    "source": [
-    "[\\w.-]+@[a-zA-Z.-]+(?<!\\.)+[.-_][a-zA-Z]{2,3}"
+    "- b) it will accept not only “.” but also \"-\" and \"\" ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ba6a0439-0a9f-4981-b148-bb1c5fc64410",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('john.smith@yahoo_com', True),\n",
+       " ('john.smith@yahoo.com', True),\n",
+       " ('john.smith@yahoo-com', True),\n",
+       " ('john.smith@yahoo@com', False)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# after experimenting '-' in brackets is auto-escaped if place at the end or start\n",
+    "pattern = \"[\\w.-]+@[a-zA-Z.-]+(?<![.-])[-._][a-zA-Z]{2,3}$\"\n",
+    "sample_strings = ['john.smith@yahoo_com', 'john.smith@yahoo.com', 'john.smith@yahoo-com', 'john.smith@yahoo@com']\n",
+    "list(zip(sample_strings, map(email_validator, sample_strings)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2af73117-fd15-406d-a50b-73166c6f9593",
+   "id": "19877d7c-7799-444f-81bb-37e42d9b3e12",
    "metadata": {},
    "source": [
-    "[\\w.-]+@[a-zA-Z.-]+(?<!\\.)+[.-_][a-zA-Z]{4,}"
+    "- c) requires at least four characters after the ./-/ symbol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6868529e-8689-4c3a-ac22-e11ef1f6b89a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('john.smith@yahoo_comasd', True),\n",
+       " ('john.smith@yahoo.coms', True),\n",
+       " ('john.smith@yahoo-com', False),\n",
+       " ('john.smith@yahoo@com', False)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = \"[\\w.-]+@[a-zA-Z.-]+(?<![.-])[-._][a-zA-Z]{4,}$\"\n",
+    "sample_strings = ['john.smith@yahoo_comasd', 'john.smith@yahoo.coms', 'john.smith@yahoo-com', 'john.smith@yahoo@com']\n",
+    "list(zip(sample_strings, map(email_validator, sample_strings)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "922ecd28-e713-435e-a50e-70d9cdfa8736",
+   "id": "e02178c2-b3ee-4edd-8274-331b76f3ae7a",
    "metadata": {},
    "source": [
-    "[\\w.-]+@[a-zA-Z.-]+(?<!\\.)+[.-_][a-zA-Z]{2, 4}"
+    "- d) extensions with minimum 2 characters and maximum 4 characters shall be acceptable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "10883cc2-28e3-4dfd-b3f7-546c60dc0ab6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('john.smith@yahoo_comasd', False),\n",
+       " ('john.smith@yahoo.coms', True),\n",
+       " ('john.smith@yahoo-com', True),\n",
+       " ('john.smith@yahoo@co', False)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = \"[\\w.-]+@[a-zA-Z.-]+(?<![.-])[-._][a-zA-Z]{2,4}$\"\n",
+    "sample_strings = ['john.smith@yahoo_comasd', 'john.smith@yahoo.coms', 'john.smith@yahoo-com', 'john.smith@yahoo@co']\n",
+    "list(zip(sample_strings, map(email_validator, sample_strings)))"
    ]
   },
   {
@@ -151,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "25734432-5eb5-42ce-b843-50bdb55d9a6e",
    "metadata": {},
    "outputs": [
@@ -161,7 +376,7 @@
        "'{\"meal\": \"pizza\", \"drink\": \"soda\"}'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "f573980b-255a-4b72-8c4b-a436e8ae6cdf",
    "metadata": {},
    "outputs": [],
@@ -200,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "42178abe-0c80-4570-be88-4c3491370c0b",
    "metadata": {},
    "outputs": [],
@@ -211,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "72424a16-a669-4c4d-aa6e-55ec4d7721b6",
    "metadata": {},
    "outputs": [
@@ -248,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "ee4328e0-090b-4630-ad3b-067a2324ac2f",
    "metadata": {},
    "outputs": [
@@ -272,7 +487,7 @@
        " ('2018', 'literature')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,22 +499,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "0119f58d-4418-4dfb-87aa-f8437df3c92b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'literature': 120,\n",
-       " 'chemistry': 120,\n",
-       " 'medicine': 120,\n",
+       "{'chemistry': 120,\n",
        " 'economics': 52,\n",
        " 'physics': 120,\n",
-       " 'peace': 120}"
+       " 'literature': 120,\n",
+       " 'peace': 120,\n",
+       " 'medicine': 120}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "440eb5e1-e42f-43df-af19-e33936d423a4",
    "metadata": {},
    "outputs": [
@@ -379,7 +594,7 @@
        "'5 Nobel prizes were won by someone called Michael'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
