add exercises for le08 - 12/04 and updated exercises for le09 - 12/04

--- a/le07_apr10/exercises.ipynb
+++ b/le07_apr10/exercises.ipynb
@@ -507,11 +507,11 @@
      "data": {
       "text/plain": [
        "{'chemistry': 120,\n",
-       " 'economics': 52,\n",
-       " 'physics': 120,\n",
        " 'literature': 120,\n",
+       " 'physics': 120,\n",
+       " 'medicine': 120,\n",
        " 'peace': 120,\n",
-       " 'medicine': 120}"
+       " 'economics': 52}"
       ]
      },
      "execution_count": 18,
@@ -534,64 +534,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1914 literature award had no laureates\n",
-      "1914 peace award had no laureates\n",
-      "1915 peace award had no laureates\n",
-      "1915 medicine award had no laureates\n",
-      "1916 chemistry award had no laureates\n",
-      "1916 peace award had no laureates\n",
-      "1916 physics award had no laureates\n",
-      "1916 medicine award had no laureates\n",
-      "1917 chemistry award had no laureates\n",
-      "1917 medicine award had no laureates\n",
-      "1918 literature award had no laureates\n",
-      "1918 peace award had no laureates\n",
-      "1918 medicine award had no laureates\n",
-      "1919 chemistry award had no laureates\n",
-      "1921 medicine award had no laureates\n",
-      "1923 peace award had no laureates\n",
-      "1924 chemistry award had no laureates\n",
-      "1924 peace award had no laureates\n",
-      "1925 medicine award had no laureates\n",
-      "1928 peace award had no laureates\n",
-      "1931 physics award had no laureates\n",
-      "1932 peace award had no laureates\n",
-      "1933 chemistry award had no laureates\n",
-      "1934 physics award had no laureates\n",
-      "1935 literature award had no laureates\n",
-      "1939 peace award had no laureates\n",
-      "1940 chemistry award had no laureates\n",
-      "1940 literature award had no laureates\n",
-      "1940 peace award had no laureates\n",
-      "1940 physics award had no laureates\n",
-      "1940 medicine award had no laureates\n",
-      "1941 chemistry award had no laureates\n",
-      "1941 literature award had no laureates\n",
-      "1941 peace award had no laureates\n",
-      "1941 physics award had no laureates\n",
-      "1941 medicine award had no laureates\n",
-      "1942 chemistry award had no laureates\n",
-      "1942 literature award had no laureates\n",
-      "1942 peace award had no laureates\n",
-      "1942 physics award had no laureates\n",
-      "1942 medicine award had no laureates\n",
-      "1943 literature award had no laureates\n",
-      "1943 peace award had no laureates\n",
-      "1948 peace award had no laureates\n",
-      "1955 peace award had no laureates\n",
-      "1956 peace award had no laureates\n",
-      "1966 peace award had no laureates\n",
-      "1967 peace award had no laureates\n",
-      "1972 peace award had no laureates\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'5 Nobel prizes were won by someone called Michael'"
+       "'10 Nobel prizes were won by someone called Michael'"
       ]
      },
      "execution_count": 19,
@@ -604,10 +549,11 @@
     "for prize in sorted(nobel['prizes'], key=lambda pr: pr['year']):\n",
     "    try:\n",
     "        for laureate in prize['laureates']:\n",
-    "            if laureate['firstname'] == 'Michael':\n",
+    "            if 'Michael' in laureate['firstname']:\n",
     "                count += 1\n",
     "    except KeyError:\n",
-    "        print(f\"{prize['year']} {prize['category']} award had no laureates\")\n",
+    "        # print(f\"{prize['year']} {prize['category']} award had no laureates\")\n",
+    "        pass\n",
     "f\"{count} Nobel prizes were won by someone called Michael\""
    ]
   }
