correction on 'Brazil' exercise of le08 - 12/04

--- a/le07_apr10/exercises.ipynb
+++ b/le07_apr10/exercises.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a07d4849-3f75-4478-8b80-0c41c7a1e2bb",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "5953bfe4-8211-41bf-beaa-c58854419ccc",
    "metadata": {},
    "outputs": [
@@ -121,13 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<re.Match object; span=(0, 6), match='Brazil'>\n"
+      "pattern not found\n"
      ]
     }
    ],
    "source": [
-    "pattern = r\"[a-yA-Y]*z[a-yA-Y]*\"\n",
-    "string = 'Brazil'\n",
+    "pattern = r\"^(?![zZ])[a-zA-Z]*(?<![zZ])$\"\n",
+    "string = 'zBrzzazzilz'\n",
     "if match := re.search(pattern, string):\n",
     "    print(match)\n",
     "else:\n",
