--- a/le07_apr10/exercises.ipynb
+++ b/le07_apr10/exercises.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a07d4849-3f75-4478-8b80-0c41c7a1e2bb",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "5953bfe4-8211-41bf-beaa-c58854419ccc",
    "metadata": {},
    "outputs": [
@@ -121,13 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pattern not found\n"
+      "<re.Match object; span=(0, 8), match='Brzazizl'>\n"
      ]
     }
    ],
    "source": [
-    "pattern = r\"^(?![zZ])[a-zA-Z]*(?<![zZ])$\"\n",
-    "string = 'zBrzzazzilz'\n",
+    "pattern = r\"^(?![zZ])[a-zA-Z]*z[a-zA-Z]*(?<![zZ])$\"\n",
+    "string = 'Brzazizl'\n",
     "if match := re.search(pattern, string):\n",
     "    print(match)\n",
     "else:\n",
