Structural and naming overhaul - all files adhere to a kebab-case format - change all folder names in the following way: 	- order by time 	- topic included - remove unecessary gitignore rules - minor updates to the  Readme.md file - rename exercise files in the following way: 	- no longer include the redundant word 'exercises' 	- identify by day number

--- a/03-advanced-data-handling-regex-json/day-2.ipynb
+++ b/03-advanced-data-handling-regex-json/day-2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "6a841769-5cd4-4022-ab91-46f3e254cba1",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "018702e2-1bfd-47c3-b35f-2f0e45a71ed0",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "1df3e7d5-42e2-4a42-87dd-c4973616c09d",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "cc08c831-a91e-4f6a-82e6-56b773beadd6",
    "metadata": {},
    "outputs": [
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 Nobel prizes were won by someone whose name starts with 'M' and ends with 'I'\n",
-      "['Masatoshi', 'Martti']\n"
+      "16 Nobel prizes were won by someone whose name starts with 'M' and ends with 'l'\n",
+      "['Mikhail', 'Miguel Angel', 'Marshall', 'Michael', 'Michael', 'Mikhail', 'Michael', 'Michael', 'Michael', 'Manuel', 'Michael', 'Michael', 'Michael', 'Michael', 'Michel', 'Michael']\n"
      ]
     }
    ],
@@ -105,13 +105,13 @@
     "for prize in sorted(nobel['prizes'], key=lambda pr: pr['year']):\n",
     "    try:\n",
     "        for laureate in prize['laureates']:\n",
-    "            if name := re.search(r'^[Mm].*[Ii]$', laureate['firstname']):\n",
+    "            if name := re.search(r'\\b[M].*[l]\\b', laureate['firstname']):\n",
     "                names.append(name.group())\n",
     "                count += 1\n",
     "    except KeyError:\n",
     "        # print(f\"{prize['year']} {prize['category']} award had no laureates\")\n",
     "        pass\n",
-    "print(f\"{count} Nobel prizes were won by someone whose name starts with 'M' and ends with 'I'\")\n",
+    "print(f\"{count} Nobel prizes were won by someone whose name starts with 'M' and ends with 'l'\")\n",
     "print(names)"
    ]
   },
@@ -723,7 +723,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "bb_data",
    "language": "python",
    "name": "python3"
   },
