--- a/03-advanced-data-handling-regex-json/day-1.ipynb
+++ b/03-advanced-data-handling-regex-json/day-1.ipynb
@@ -560,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "bb_data",
    "language": "python",
    "name": "python3"
   },
